# url_shortener

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py  base62.py  id_generator.py  schema.sql
app/templates/: index.html
tests/: test_app.py
